# MarketStream-ETL

./: .gitignore  CMakeLists.txt  README.md  sample_data.csv
src/: main.cpp  test_pg.cpp
src/benchmark/: Benchmarker.hpp
src/database/: DatabaseLoader.cpp  DatabaseLoader.hpp
src/feed/: TickClient.hpp  TickMessage.hpp  TickServer.hpp
src/indicators/: TechnicalIndicators.hpp
src/model/: Trade.hpp
src/output/: ParquetWriter.cpp  ParquetWriter.hpp
src/parser/: CsvParser.cpp  CsvParser.hpp
src/threading/: ParallelLoader.hpp  PipelineExecutor.hpp  SPSCQueue.hpp  SPSCQueueNoPadding.hpp  ThreadPool.hpp
src/tools/: DataGenerator.hpp  false_sharing_benchmark.cpp  generate_data.cpp  spsc_benchmark.cpp  websocket_demo.cpp
src/validator/: TradeValidator.hpp
